--- a/package.json
+++ b/package.json
@@ -1,43 +1,42 @@
 {
-  "name": "movie-app",
-  "version": "1.0.0",
-  "main": "./src/index.js",
-  "repository": "git@github.com:kasuyan/movie-app.git",
-  "author": "kasuya_kazunori <kasuya_kazunori@cyberagent.co.jp>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "webpack",
-    "start": "webpack-dev-server --open"
-  },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.8.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "html-webpack-plugin": "^3.2.0",
-    "prettier": "^1.19.1",
-    "webpack": "^4.41.4",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
-  },
-  "resolve": {
-    "extensions": [
-      ".js",
-      ".jsx"
-    ]
-  },
-  "devtool": "inline-source-map"
+	"name": "movie-app",
+	"version": "1.0.0",
+	"main": "./src/index.js",
+	"repository": "git@github.com:kasuyan/movie-app.git",
+	"author": "kasuya_kazunori <kasuya_kazunori@cyberagent.co.jp>",
+	"license": "MIT",
+	"scripts": {
+		"dev": "webpack",
+		"start": "webpack-dev-server --open",
+		"deploy": "gh-pages -d dist"
+	},
+	"dependencies": {
+		"axios": "^0.19.0",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-router": "^5.1.2",
+		"react-router-dom": "^5.1.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.7.7",
+		"@babel/preset-env": "^7.7.7",
+		"@babel/preset-react": "^7.7.4",
+		"babel-eslint": "^10.0.3",
+		"babel-loader": "^8.0.6",
+		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^6.8.0",
+		"eslint-loader": "^3.0.3",
+		"eslint-plugin-prettier": "^3.1.2",
+		"eslint-plugin-react": "^7.17.0",
+		"gh-pages": "^2.1.1",
+		"html-webpack-plugin": "^3.2.0",
+		"prettier": "^1.19.1",
+		"webpack": "^4.41.4",
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.10.1"
+	},
+	"resolve": {
+		"extensions": [ ".js", ".jsx" ]
+	},
+	"devtool": "inline-source-map"
 }
