--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-router": "^5.1.2",
-		"react-router-dom": "^5.1.2"
+		"react-router-dom": "^5.1.2",
+		"styled-components": "^4.4.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.7.7",
@@ -36,7 +37,10 @@
 		"webpack-dev-server": "^3.10.1"
 	},
 	"resolve": {
-		"extensions": [ ".js", ".jsx" ]
+		"extensions": [
+			".js",
+			".jsx"
+		]
 	},
 	"devtool": "inline-source-map"
 }
