--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint-loader": "^3.0.3",
 		"eslint-plugin-prettier": "^3.1.2",
 		"eslint-plugin-react": "^7.17.0",
+		"file-loader": "^5.0.2",
 		"gh-pages": "^2.1.1",
 		"html-webpack-plugin": "^3.2.0",
 		"prettier": "^1.19.1",
