--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 	"author": "kasuya_kazunori <kasuya_kazunori@cyberagent.co.jp>",
 	"license": "MIT",
 	"scripts": {
-		"dev": "webpack",
+		"dev": "webpack --mode development",
+		"deploy": "webpack --mode production",
 		"start": "webpack-dev-server --open",
-		"deploy": "gh-pages -d dist"
+		"ghp": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"axios": "^0.19.0",
@@ -38,10 +39,7 @@
 		"webpack-dev-server": "^3.10.1"
 	},
 	"resolve": {
-		"extensions": [
-			".js",
-			".jsx"
-		]
+		"extensions": [ ".js", ".jsx" ]
 	},
 	"devtool": "inline-source-map"
 }
